# BIT-ROS-Project

./: .gitignore  README.md  visualize_waypoints.py
config/: my_route.yaml  nav2_tiago.rviz  nav2_tuning.yaml  waypoints.yaml
config/behavior_trees/: dynamic_multi_controller.xml  nav2_groot_models.xml
config/controllers/: dwb.yaml  mppi.yaml  rpp.yaml  stanley.yaml
config/nav2_params/: aggressive.yaml  baseline.yaml  better_rotation.yaml  high_speed.yaml  safe_narrow.yaml  smooth_path.yaml  stanley_controller.yaml  stanley_default_bt.yaml
map/: batch_nav_test.sh  launch_tiago.sh  launch_tiago_nav2.sh  launch_tiago_slam.sh  launch_tiago_test.sh  save_map.sh  teleop_ui.py
map/turtlebot4_gz_bringup/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
map/turtlebot4_gz_bringup/gui/headless/: gui.config
map/turtlebot4_gz_bringup/gui/lite/: gui.config
map/turtlebot4_gz_bringup/gui/minimal/: gui.config
map/turtlebot4_gz_bringup/gui/standard/: gui.config
map/turtlebot4_gz_bringup/launch/: ros_gz_bridge.launch.py  sim.launch.py  turtlebot4_gz.launch.py  turtlebot4_nodes.launch.py  turtlebot4_spawn.launch.py
map/turtlebot4_gz_bringup/worlds/: depot.sdf  warehouse.sdf
report/: report.aux  report.fdb_latexmk  report.fls  report.tex  report.toc
robot/pal_navigation_cfg_public/pal_navigation_cfg_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
robot/pal_navigation_cfg_public/pal_navigation_cfg_bringup/launch/: nav_bringup.launch.py
robot/pal_navigation_cfg_public/pal_navigation_cfg_params/: CHANGELOG.rst  CMakeLists.txt  package.xml
robot/pal_navigation_cfg_public/pal_navigation_cfg_params/params/: omni_base_nav2.yaml  pmb2_nav2.yaml  tiago_nav2.yaml
robot/pal_navigation_cfg_public/pal_navigation_cfg_public/: CHANGELOG.rst  CMakeLists.txt  package.xml
robot/tiago_robot/ament_fake/share/: pal_gripper_description  pal_hey5_description  pal_robotiq_description  pal_robotiq_epick_description  pal_urdf_utils  pmb2_description  tiago_description
robot/tiago_robot/tiago_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
robot/tiago_robot/tiago_bringup/config/joy_teleop/: joy_config.yaml  joy_teleop_omni_base.yaml  joy_teleop_pmb2.yaml  joystick_analyzers.yaml
robot/tiago_robot/tiago_bringup/config/motion_planner/: motion_planner.yaml.em  motion_planner_no-arm.yaml  motion_planner_pal-gripper.yaml  motion_planner_pal-hey5.yaml  motion_planner_robotiq-2f-85.yaml  motion_planner_robotiq-epick.yaml
robot/tiago_robot/tiago_bringup/config/motions/: tiago_motions.yaml.em  tiago_motions_custom.yaml  tiago_motions_general.yaml  tiago_motions_head.yaml  tiago_motions_no-arm.yaml  tiago_motions_pal-gripper.yaml  tiago_motions_pal-hey5.yaml  tiago_motions_robotiq-2f-140.yaml  tiago_motions_robotiq-2f-85.yaml  tiago_motions_robotiq-epick.yaml
robot/tiago_robot/tiago_bringup/launch/: joystick_teleop.launch.py  tiago_bringup.launch.py  tiago_play_motion2.launch.py  twist_mux.launch.py
robot/tiago_robot/tiago_bringup/module/: joystick.yaml  play_motion2.yaml  twist_mux.yaml
robot/tiago_robot/tiago_bringup/scripts/: regen_em_file.py
robot/tiago_robot/tiago_controller_configuration/: CHANGELOG.rst  CMakeLists.txt  package.xml
robot/tiago_robot/tiago_controller_configuration/config/: arm_controller.yaml  gravity_compensation_controller_parker.yaml  head_controller.yaml  joint_state_broadcaster.yaml  torso_controller.yaml
robot/tiago_robot/tiago_controller_configuration/launch/: default_controllers.launch.py  gravity_compensation_controller.launch.py
robot/tiago_robot/tiago_controller_configuration/module/: 10_default_controllers.yaml
robot/tiago_robot/tiago_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
robot/tiago_robot/tiago_description/config/: tiago_configuration.yaml  urdf.rviz
robot/tiago_robot/tiago_description/launch/: robot_state_publisher.launch.py  show.launch.py
robot/tiago_robot/tiago_description/meshes/torso/: tiago_screen_collision.stl
robot/tiago_robot/tiago_description/models/tiago/: model.config  model.sdf  model.sdf.bak  model.urdf
robot/tiago_robot/tiago_description/models/tiago_no_arm/: model.sdf
robot/tiago_robot/tiago_description/module/: 10_robot_state_publisher.yaml
robot/tiago_robot/tiago_description/robots/: tiago.urdf.xacro
robot/tiago_robot/tiago_description/ros2_control/: gazebo_controller_manager_cfg.yaml  ros2_control.urdf.xacro  transmissions.urdf.xacro
robot/tiago_robot/tiago_description/test/: test_xacro.py
robot/tiago_robot/tiago_description/tiago_description/: launch_arguments.py
robot/tiago_robot/tiago_description/urdf/arm/: arm.ros2_control.xacro  arm.urdf.xacro  wrist.ros2_control.xacro
robot/tiago_robot/tiago_description/urdf/torso/: torso.urdf.xacro
robot/tiago_robot/tiago_robot/: CHANGELOG.rst  package.xml
src/: compare_nav_results.py  debug_tf.py  follow_waypoints.py  laser_frame_remapper.py  merge_nav2_params.py  nav_performance_test.py  odom_to_tf.py  pal_hey5  pal_urdf_utils  pmb2_robot  record_waypoints.py  record_waypoints_v2.py  simple_waypoint_recorder.py  test_navigation_performance.py
src/custom_controller/: CMakeLists.txt  package.xml  plugin.xml
src/custom_controller/include/custom_controller/: stanley_controller.hpp
src/custom_controller/src/: stanley_controller.cpp
test_results/batch_20251207_220351/: batch_summary.yaml
test_results/controller/: batch_summary.yaml  comparison_report.html  nav_test_baseline_dwb.csv  nav_test_baseline_dwb.yaml  nav_test_baseline_mppi.csv  nav_test_baseline_mppi.yaml  nav_test_baseline_rpp.csv  nav_test_baseline_rpp.yaml  nav_test_baseline_stanley.csv  nav_test_baseline_stanley.yaml
test_results/nav_parameter/: batch_summary.yaml  comparison_report.html  nav_test_aggressive.csv  nav_test_aggressive.yaml  nav_test_baseline.csv  nav_test_baseline.yaml  nav_test_better_rotation.csv  nav_test_better_rotation.yaml  nav_test_high_speed.csv  nav_test_high_speed.yaml  nav_test_safe_narrow.csv  nav_test_safe_narrow.yaml  nav_test_smooth_path.csv  nav_test_smooth_path.yaml
(+5 files in other folders)
