<?xml version="1.0"?>
<package format="3">
  <name>custom_controller</name>
  <version>0.0.1</version>
  <description>Stanley-based Nav2 controller plugin.</description>

  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>nav2_core</depend>
  <depend>nav2_util</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>angles</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin_manifest="plugin.xml"/>
  </export>
</package>
